Signed-off-by: yx-long <yxl971122@163.com>

--- a/项目总结/实训项目结构.md
+++ b/项目总结/实训项目结构.md
@@ -6262,7 +6262,9 @@ public interface StockMapper extends Mapper<StockEntity> {
     }
 ```
 
-#### 修改(回显数据)
+## 5.商品管理(修改)
+
+### 修改(回显数据)
 
  **vue项目**
 
@@ -6491,7 +6493,7 @@ public interface SkuMapper extends Mapper<SkuEntity>, InsertListMapper<SkuEntity
 
 ```
 
-#### 修改(提交)
+### 修改(提交)
 
 **vue项目**
 
@@ -6609,7 +6611,7 @@ public interface StockMapper extends Mapper<StockEntity>, DeleteByIdListMapper<S
     }
 ```
 
-#### 删除
+## 6.商品管理删除
 
 **vue项目**
 
@@ -6671,14 +6673,14 @@ public interface StockMapper extends Mapper<StockEntity>, DeleteByIdListMapper<S
         example.createCriteria().andEqualTo("spuId",spuId);
         List<SkuEntity> skuEntities = skuMapper.selectByExample(example);
         //得到skuId集合
-        List<Long> skuIdList = skuEntities.stream().map(skuEntity -> skuEntity.getId()).collect(Collectors.toList());
+        List<Long> skuIdList = skuEntities.stream().map(skuEntity -> 		skuEntity.getId()).collect(Collectors.toList());
         skuMapper.deleteByIdList(skuIdList);//通过skuId集合删除sku信息
         stockMapper.deleteByIdList(skuIdList);//通过skuId集合删除stock信息
     }
 
 ```
 
-#### 商品上下架
+## 7.商品上下架
 
 **vue项目**
 
@@ -6693,20 +6695,17 @@ public interface StockMapper extends Mapper<StockEntity>, DeleteByIdListMapper<S
 
 ```js
  sxj(val){
-        .then(( resp)=> {
-          //发起下架请求
-          this.$http({
-                  url:"/goods/sxjGoods",
-                  method:"put",
-                  data:val
-          	}) 
-          .then(() =>{
-            //删除成功 重新加载数据
-            this.getDataFromApi();
-            this.$message.success(resp.data.message);
-          })
-        })
-      },
+     this.$http({
+         url:"/goods/sxjGoods",
+         method:"put",
+         data:val
+     }) 
+         .then((resp) =>{
+        	 this.getDataFromApi();
+        	 this.$message.success(resp.data.message);
+     })
+ })
+},
 ```
 
 **GoodsService.java**
